# structural-pipeline

./: .README.md.swp  .dockerignore  .gitignore  CHANGES.md  CHANGES.txt  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  dhcp-pipeline.sh  reg-template-final.sh  setup.sh
TODO/: TODO.list  dHCP-internal.sh  setup0.sh
TODO/label_names/: all_labels.csv  cortical_labels.csv  labels.csv  super-structures.csv
TODO/pipelines/: QC-reports-v2.4.sh
TODO/run/: get-dump.sh  run.sh  upload.sh
TODO/scripts/measures/: GI-measurements.sh  compute-QC-measurements.sh  compute-measurements.sh  image-QC-measurements.sh  pipeline.sh  surface-measurements.sh  volume-measurements.sh
applications/: CMakeLists.txt  dilate-labels.cc  extend-image-slices.cc  mid-surface.cc  surface-assign-labels.cc  surface-scalar-statistics.cc
parameters/: configuration.sh  parin-4-levels.cfg  recon-neonatal-cortex-from-seg.cfg  recon-neonatal-cortex.cfg  spherical-mesh.cfg
parameters/fetal/: configuration.sh
parameters/neonatal/: configuration.sh
parameters/neonatal/deface/: README
scripts/misc/: pipeline.sh  structure-data.sh
scripts/segmentation/: .pipeline.sh.swp  pipeline.sh
scripts/surface/: create-myelin-map.sh  pipeline.sh  process-surfaces-hemisphere.sh
test-build/: CMakeCache.txt  Makefile  cmake_install.cmake
test-build-ITK/: CMakeCache.txt  Makefile  cmake_install.cmake
test-build-ITK/applications/: Makefile  cmake_install.cmake
test-build/applications/: Makefile
